user's events are listed with card components. the resulting bugs such as sidebar collapse, sizing  are fixed

--- a/front-end/playground/src/App.css
+++ b/front-end/playground/src/App.css
@@ -8,7 +8,7 @@
 .body-part {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     align-items: stretch;
 }
 
